# ML-IDE

./: .gitignore  AGENT_PLAN.md  BUILD_STATUS.md  CONTRIBUTING.md  LICENSE  README.md  STANDALONE_PLAN.md  TODO.md  package-lock.json  package.json
.github/workflows/: ci.yml
core/: package.json  tsconfig.json  vitest.config.ts
core/src/: adapter.test.ts  adapter.ts  agentClient.test.ts  agentClient.ts  conversation.test.ts  conversation.ts  directives.test.ts  directives.ts  helperClient.smoke.ts  helperClient.ts  index.ts  memory.test.ts  memory.ts  validate.test.ts
extension/: package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts  helperClient.ts
hosts/desktop/: package.json  tsconfig.json
hosts/desktop/src/: main.ts  preload.ts
lens-helper/: pyproject.toml
lens-helper/lens_helper/: __init__.py  __main__.py  callgraph.py  loaders.py  project.py  rpc.py  structure.py  tracer.py
lens-helper/tests/: test_helper.py
shared/: package-lock.json  package.json  tsconfig.json
shared/src/: protocol.ts
spike/: README.md  trace_probe.py
spike/api-probe/: package-lock.json  package.json
spike/api-probe/src/: extension.ts
spike/sampledata/: buggy.py  demo_model.py  embeddings.npy  encoder.py  metrics.csv  pipeline.py
webview-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
webview-ui/src/: App.svelte  app.css  main.ts  store.test.ts  store.ts  theme.ts  vscode.ts
webview-ui/src/lib/: Blocks.svelte  Chat.svelte  Cockpit.svelte  Compare.svelte  Data.svelte  Editor.svelte  (+6 more)
